# Unix_C

./: .gitignore  README.md
C++/: CMakeLists.txt  test.c  test.cpp
C++/1.Grammar/: .1.数据类型.cpp.swp  0.typedef.cpp  1.数据类型.cpp  10.函数重载.cpp  11.类.cpp  12.构造析构.cpp  13.拷贝构造.cpp  14.返回对象和引用.cpp  15.深拷贝.cpp  16.初始化列表.cpp  17.类中类成员.cpp  18.常对象常成员.cpp  19.静态成员.cpp  2.指针与数组.cpp  20.this指针.cpp  21.友元.cpp  22.+、-重载.cpp  23.<<>>重载.cpp  24.++重载.cpp  25.=重载.cpp  26.逻辑重载.cpp  27.继承.cpp  28.继承初始化.cpp  29.覆盖.cpp  3.函数与数组.cpp  30.多继承.cpp  31.虚继承.cpp  32.多态虚函数.cpp  33.纯虚函数.cpp  34.单例模式.cpp  35.异常.cpp  36.函数模版.cpp  37.类模版.cpp  38.继承模版.cpp  39.多态模版.cpp  4.函数与指针.cpp  40.类类型模版.cpp  41.文本文件.cpp  42.二进制文件.cpp  43.智能指针.cpp  (+7 more)
C++/1.Grammar/C++11/: 1.{}.cpp  10.变长模板.cpp  11.右值引用、移动语义.cpp  12.完美转发.cpp  2.initializer_list.cpp  3.explicit.cpp  4.for.cpp  5.=default、=delete.cpp  6.using.cpp  7.noexcept、override、final.cpp  8.auto、decltype.cpp  8.decltype.cpp  9.lambda.cpp
C++/2.STL/: 0.iterator_category.cpp  0.pair.cpp  1.string.cpp  10.tuple.cpp  11.仿函数.cpp  12.谓词.cpp  13.内建仿函数.cpp  14.for_each.cpp  15.transform.cpp  16.find.cpp  17.find_if.cpp  18.adjacent_find.cpp  19.binary_search.cpp  2.vector.cpp  20.count.cpp  21.count_if.cpp  22.sort.cpp  23.shuffle.cpp  24.merge.cpp  25.reverse.cpp  26.copy.cpp  27.replace.cpp  28.replace_if.cpp  29.swap.cpp  3.deque.cpp  30.set_intersection.cpp  31.set_union.cpp  32.set_difference.cpp  33.accumulate.cpp  34.fill.cpp  35.bind1st、bind2nd.cpp  36.not1、not2.cpp  37.bind.cpp  38.inserter.cpp  39.ostream_iterator.cpp  4.stack.cpp  40.istream_iterator.cpp  5.queue.cpp  6.list.cpp  7.set.cpp  (+2 more)
C++/3.Memory/: 1.动态分配.cpp  2.重载new、delete.cpp
C++/4.Thread/: 1.thread.cpp  10.智能指针作参数.cpp  11.mutex、lock_guard.cpp  12.recursive_mutex.cpp  13.timed_mutex.cpp  14.死锁.cpp  15.lock.cpp  16.unique_lock.cpp  17.thread+单例、call_once.cpp  18.condition_variable、wait、notify.cpp  19.async、future.cpp  2.join.cpp  20.future_status.cpp  21.shared_future.cpp  22.packaged_task.cpp  23.promise.cpp  24.atomic.cpp  3.detach.cpp  4.joinable.cpp  5.thread+仿函数.cpp  6.thread+成员函数.cpp  7.thread+lambda.cpp  8.detach临时对象作参数.cpp  9.ref.cpp
C++/5.Socket/: 1.TCP服务器  1.TCP服务器.c  2.TCP客户端  2.TCP客户端.c
C++/6.Linux系统编程/1.IO/: 1.fprintf、sprintf、snprintf.c  2.fseek、ftell、rewind.c  3.fflush.c  4.open、read、write.c  5.dup.c  5.dup、dup2.c  read.txt
C++/6.Linux系统编程/2.文件系统/: 1.stat  1.stat.c  10.du.c  11.getgrgid、getgrnam.c  11.getpwuid、getpwnam.c  13.getpass、crypt.c  13.time、gmtime、localtime、strftime、mktime.c  14.time、gmtime、localtime、strftime、mktime.c  15.atexit.c  16.getopt.c  17.setjmp、longjmp.c  2.chmod.c  2.chmod、fchmod.c  3.link.c  4.rename.c  5.remove.c  6.mkdir、rmdir.c  7.getcwd、chdir.c  8.glob  8.glob.c  9.opendir、readdir、closedir.c
C++/6.Linux系统编程/3.目录和用户操作/: 2.opendir、readdir、closedir.c  3.du  3.du.c
C++/6.Linux系统编程/3.进程/: 1.atexit.c  1.getpid、getppid.c  2.fork.c  2.getpid、getppid.c  3.wait.c  4.exec.c  4.wait.c  4.waitpid.c  5.exec.c  6.exec.c  shell.c
C++/6.Linux系统编程/4.信号/: 1.signal.c  2.kill、raise、alarm、pause.c  2.kill、raise、alarm、pause、abort.c  3.setitimer.c  4.sigset.c  5.sigsuspend.c  6.sigaction.c
C++/6.Linux系统编程/5.线程/: 1.create、join、exit.c  1.pthread_create.c  10.openmp.c  2.detach.c  3.cancel.c  3.push、pop.c  4.cancel.c  4.mutex.c  5.mutex.c  6.cond.c  7.sem.c  8.rwlock.c  9.attribute.c  producer_consumer_cond.cpp  producer_consumer_mutex.cpp
C++/6.Linux系统编程/6.高级IO/: 1.finite_state_machine.c  2.select.c  3.poll.c  4.epoll.c  5.mmap.c  6.flock.c
C++/6.Linux系统编程/7.进程间通信/: ipc.c  ipc.txt  pipe.c
C++/6.Linux系统编程/7.进程间通信/fifo/: protocol.h  receiver.c  sender.c
C++/6.Linux系统编程/7.进程间通信/message_queues/: protocol.h  receiver.c  sender.c
C++/6.Linux系统编程/8.网络编程/: socket.txt
C++/6.Linux系统编程/8.网络编程/tcp/: client.c  server.c
C++/6.Linux系统编程/8.网络编程/udp/: temp.c  udp  udp.c
C++/6.Linux系统编程/8.网络编程/udp/broadcast/: receiver.c  sender.c
C++/6.Linux系统编程/8.网络编程/udp/multicast/: receiver.c  sender.c
C++/6.Linux系统编程/8.网络编程/udp/unicast/: receiver.c  sender.c
C++/7.Algorithm/1.Search/: 1.SequentialSearch.cpp  2.BinarySearch.cpp  3.HashSearch.cpp
C++/7.Algorithm/2.Sort/: 1.BubbleSort.cpp  2.SelctionSort.cpp  3.InsertionSort.cpp  4.ShellSort.cpp  5.MergeSort.cpp  6.QuickSort.cpp  7.HeapSort.cpp
C++/7.Algorithm/3.Tree/: 1.BinaryTree.cpp  2.BalancedBinaryTree.cpp
LeetCode/: 1.AssignCookies_Easy.cpp  102. 二叉树的层序遍历.cpp  105. 从前序与中序遍历序列构造二叉树.cpp  15.三数之和.cpp  152. 乘积最大子数组.cpp  2. 两数相加.cpp  2.Candy_Hard.cpp  204. 计数质数.cpp  22. 括号生成.cpp  300. 最长递增子序列.cpp  322. 零钱兑换.cpp  5. 最长回文子串.cpp  55. 跳跃游戏.cpp  62. 不同路径.cpp  CMakeLists.txt  test.cpp  剑指 Offer 17. 打印从1到最大的n位数.cpp  剑指 Offer 24. 反转链表.cpp  剑指 Offer 31. 栈的压入、弹出序列.cpp  剑指 Offer 41. 数据流中的中位数.cpp  剑指 Offer 49. 丑数.cpp  剑指 Offer 65. 不用加减乘除做加法.cpp
Leetcode/: 三数之和.cpp  长度最小子数组.cpp
Linux/: 1.基本命令.txt  10.gcc:g++命令.txt  11.静态库:动态库.txt  12.gdb命令.txt  13.make命令.txt  14.shell编程.txt  15.git命令.txt  2.文件权限命令.txt  3.查找命令.txt  4.帮助命令.txt  5.压缩命令.txt  6.进程命令.txt  7.网络命令.txt  8.用户管理命令.txt  9.vim命令.txt
Linux/11.动态库/: main  main.cpp
Linux/11.静态库/: Add.cpp  Sub.cpp  head.h  main
Linux/13.Makefile/1.显式规则/: Makefile  hello  hello.S  hello.i
Linux/13.Makefile/2.变量/: Makefile  hello.cpp
Linux/13.Makefile/3.内置变量/: Makefile
Linux/13.Makefile/4.通配符/: Makefile  hello2.cpp  main
Linux/13.Makefile/5.函数/: Makefile  hello1.cpp  main  main.cpp
Linux/14.shell/: case.sh  for.sh  funcation.sh  if.sh  until.sh  while.sh
