cmake_minimum_required(VERSION 3.16)
project(C++)
set(CMAKE_CXX_STANDARD 14)


#add_executable(Grammar 1.Grammar/1.数据类型.cpp)
#add_executable(Grammar 1.Grammar/2.指针与数组.cpp)
#add_executable(Grammar 1.Grammar/3.函数与数组.cpp)
#add_executable(Grammar 1.Grammar/4.函数与指针.cpp)
#add_executable(Grammar 1.Grammar/5.new.cpp)
#add_executable(Grammar 1.Grammar/6.内存分配.cpp)
#add_executable(Grammar 1.Grammar/7.引用.cpp)
#add_executable(Grammar 1.Grammar/8.引用传参.cpp)
#add_executable(Grammar 1.Grammar/9.默认参数.cpp)
#add_executable(Grammar 1.Grammar/10.函数重载.cpp)
#add_executable(Grammar 1.Grammar/11.类.cpp)
#add_executable(Grammar 1.Grammar/12.构造析构.cpp)
#add_executable(Grammar 1.Grammar/13.拷贝构造.cpp)
#add_executable(Grammar 1.Grammar/14.返回对象和引用.cpp)
#add_executable(Grammar 1.Grammar/15.深拷贝.cpp)
#add_executable(Grammar 1.Grammar/16.初始化列表.cpp)
#add_executable(Grammar 1.Grammar/17.类中类成员.cpp)
#add_executable(Grammar 1.Grammar/18.常对象常成员.cpp)
#add_executable(Grammar 1.Grammar/19.静态成员.cpp)
#add_executable(Grammar 1.Grammar/20.this指针.cpp)
#add_executable(Grammar 1.Grammar/21.友元.cpp)
#add_executable(Grammar 1.Grammar/22.+、-重载.cpp)
#add_executable(Grammar 1.Grammar/23.<<>>重载.cpp)
#add_executable(Grammar 1.Grammar/24.++重载.cpp)
#add_executable(Grammar 1.Grammar/25.=重载.cpp)
#add_executable(Grammar 1.Grammar/26.逻辑重载.cpp)
#add_executable(Grammar 1.Grammar/27.继承.cpp)
#add_executable(Grammar 1.Grammar/28.继承初始化.cpp)
#add_executable(Grammar 1.Grammar/29.覆盖.cpp)
#add_executable(Grammar 1.Grammar/30.多继承.cpp)
#add_executable(Grammar 1.Grammar/31.虚继承.cpp)
#add_executable(Grammar 1.Grammar/32.多态虚函数.cpp)
#add_executable(Grammar 1.Grammar/33.纯虚函数.cpp)
#add_executable(Grammar 1.Grammar/34.单例模式.cpp)
#add_executable(Grammar 1.Grammar/35.异常.cpp)
#add_executable(Grammar 1.Grammar/36.函数模版.cpp)
#add_executable(Grammar 1.Grammar/37.类模版.cpp)
#add_executable(Grammar 1.Grammar/38.继承模版.cpp)
#add_executable(Grammar 1.Grammar/39.多态模版.cpp)
#add_executable(Grammar 1.Grammar/40.类类型模版.cpp)
#add_executable(Grammar 1.Grammar/41.文本文件.cpp)
#add_executable(Grammar 1.Grammar/42.二进制文件.cpp)
add_executable(Grammar 1.Grammar/43.智能指针.cpp)

#add_executable(Grammar 1.Grammar/C++11/1.{}.cpp)
#add_executable(Grammar 1.Grammar/C++11/2.initializer_list.cpp)
#add_executable(Grammar 1.Grammar/C++11/3.explicit.cpp)
#add_executable(Grammar 1.Grammar/C++11/4.for.cpp)
#add_executable(Grammar 1.Grammar/C++11/5.=default、=delete.cpp)
#add_executable(Grammar 1.Grammar/C++11/6.using.cpp)
#add_executable(Grammar 1.Grammar/C++11/7.noexcept、override、final.cpp)
#add_executable(Grammar 1.Grammar/C++11/8.auto、decltype.cpp)
#add_executable(Grammar 1.Grammar/C++11/9.lambda.cpp)
#add_executable(Grammar 1.Grammar/C++11/10.变长模板.cpp)
#add_executable(Grammar 1.Grammar/C++11/11.右值引用、移动语义.cpp)
#add_executable(Grammar 1.Grammar/C++11/12.完美转发.cpp)


add_executable(STL 2.STL/0.iterator_category.cpp)
#add_executable(STL 2.STL/0.pair.cpp)
#add_executable(STL 2.STL/1.string.cpp)
#add_executable(STL 2.STL/2.vector.cpp)
#add_executable(STL 2.STL/3.deque.cpp)
#add_executable(STL 2.STL/4.stack.cpp)
#add_executable(STL 2.STL/5.queue.cpp)
#add_executable(STL 2.STL/6.list.cpp)
#add_executable(STL 2.STL/7.set.cpp)
#add_executable(STL 2.STL/8.map.cpp)
#add_executable(STL 2.STL/9.array.cpp)
#add_executable(STL 2.STL/10.tuple.cpp)
#add_executable(STL 2.STL/11.仿函数.cpp)
#add_executable(STL 2.STL/12.谓词.cpp)
#add_executable(STL 2.STL/13.内建仿函数.cpp)
#add_executable(STL 2.STL/14.for_each.cpp)
#add_executable(STL 2.STL/15.transform.cpp)
#add_executable(STL 2.STL/16.find.cpp)
#add_executable(STL 2.STL/17.find_if.cpp)
#add_executable(STL 2.STL/18.adjacent_find.cpp)
#add_executable(STL 2.STL/19.binary_search.cpp)
#add_executable(STL 2.STL/20.count.cpp)
#add_executable(STL 2.STL/21.count_if.cpp)
#add_executable(STL 2.STL/22.sort.cpp)
#add_executable(STL 2.STL/23.shuffle.cpp)
#add_executable(STL 2.STL/24.merge.cpp)
#add_executable(STL 2.STL/25.reverse.cpp)
#add_executable(STL 2.STL/26.copy.cpp)
#add_executable(STL 2.STL/27.replace.cpp)
#add_executable(STL 2.STL/28.replace_if.cpp)
#add_executable(STL 2.STL/29.swap.cpp)
#add_executable(STL 2.STL/30.set_intersection.cpp)
#add_executable(STL 2.STL/31.set_union.cpp)
#add_executable(STL 2.STL/32.set_difference.cpp)
#add_executable(STL 2.STL/33.accumulate.cpp)
#add_executable(STL 2.STL/34.fill.cpp)
#add_executable(STL 2.STL/35.bind1st、bind2nd.cpp)
#add_executable(STL 2.STL/36.not1、not2.cpp)
#add_executable(STL 2.STL/37.bind.cpp)
#add_executable(STL 2.STL/38.inserter.cpp)
#add_executable(STL 2.STL/39.ostream_iterator.cpp)
#add_executable(STL 2.STL/40.istream_iterator.cpp)


add_executable(Memory 3.Memory/1.动态分配.cpp)
#add_executable(Memory 3.Memory/2.重载new、delete.cpp)


#add_executable(Thread 4.Thread/1.thread.cpp)
#add_executable(Thread 4.Thread/2.join.cpp)
#add_executable(Thread 4.Thread/3.detach.cpp)
#add_executable(Thread 4.Thread/4.joinable.cpp)
#add_executable(Thread 4.Thread/5.thread+仿函数.cpp)
#add_executable(Thread 4.Thread/6.thread+成员函数.cpp)
#add_executable(Thread 4.Thread/7.thread+lambda.cpp)
#add_executable(Thread 4.Thread/8.detach临时对象作参数.cpp)
#add_executable(Thread 4.Thread/9.ref.cpp)
#add_executable(Thread 4.Thread/10.智能指针作参数.cpp)
add_executable(Thread 4.Thread/11.mutex、lock_guard.cpp)
#add_executable(Thread 4.Thread/12.recursive_mutex.cpp)
#add_executable(Thread 4.Thread/13.timed_mutex.cpp)
#add_executable(Thread 4.Thread/14.死锁.cpp)
#add_executable(Thread 4.Thread/15.lock.cpp)
#add_executable(Thread 4.Thread/16.unique_lock.cpp)
#add_executable(Thread 4.Thread/17.thread+单例、call_once.cpp)
#add_executable(Thread 4.Thread/18.condition_variable、wait、notify.cpp)
#add_executable(Thread 4.Thread/19.async、future.cpp)
#add_executable(Thread 4.Thread/20.future_status.cpp)
#add_executable(Thread 4.Thread/21.shared_future.cpp)
#add_executable(Thread 4.Thread/22.packaged_task.cpp)
#add_executable(Thread 4.Thread/23.promise.cpp)
#add_executable(Thread 4.Thread/24.atomic.cpp)


add_executable(Socket 5.Socket/1.TCP服务器.c)
#add_executable(Socket 5.Socket/2.TCP客户端.c)


#add_executable(Linux 6.Linux系统编程/1.IO/1.fprintf、sprintf、snprintf.c)
#add_executable(Linux 6.Linux系统编程/1.IO/2.fseek、ftell、rewind.c)
#add_executable(Linux 6.Linux系统编程/1.IO/3.fflush.c)
#add_executable(Linux 6.Linux系统编程/1.IO/4.open、read、write.c)
#add_executable(Linux 6.Linux系统编程/1.IO/5.dup、dup2.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/1.stat.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/2.chmod、fchmod.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/3.link.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/4.rename.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/5.remove.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/6.mkdir、rmdir.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/7.getcwd、chdir.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/8.glob.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/9.opendir、readdir、closedir.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/10.getpwuid、getpwnam.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/11.getgrgid、getgrnam.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/12.getpass、crypt.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/13.time、gmtime、localtime、strftime、mktime.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/14.getopt.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/15.setjmp、longjmp.c)
#add_executable(Linux 6.Linux系统编程/2.文件系统/du.c)
#add_executable(Linux 6.Linux系统编程/3.进程/1.atexit.c)
#add_executable(Linux 6.Linux系统编程/3.进程/2.getpid、getppid.c)
#add_executable(Linux 6.Linux系统编程/3.进程/3.fork.c)
#add_executable(Linux 6.Linux系统编程/3.进程/4.wait.c)
#add_executable(Linux 6.Linux系统编程/3.进程/5.waitpid.c)
#add_executable(Linux 6.Linux系统编程/3.进程/6.exec.c)
#add_executable(Linux 6.Linux系统编程/3.进程/shell.c)
#add_executable(Linux 6.Linux系统编程/4.信号/1.signal.c)
#add_executable(Linux 6.Linux系统编程/4.信号/2.kill、raise、alarm、pause、abort.c)
#add_executable(Linux 6.Linux系统编程/4.信号/3.setitimer.c)
#add_executable(Linux 6.Linux系统编程/4.信号/4.sigset.c)
#add_executable(Linux 6.Linux系统编程/4.信号/5.sigsuspend.c)
#add_executable(Linux 6.Linux系统编程/4.信号/6.sigaction.c)
#add_executable(Linux 6.Linux系统编程/5.线程/1.create、join、exit.c)
#add_executable(Linux 6.Linux系统编程/5.线程/2.detach.c)
#add_executable(Linux 6.Linux系统编程/5.线程/3.push、pop.c)
#add_executable(Linux 6.Linux系统编程/5.线程/4.cancel.c)
#add_executable(Linux 6.Linux系统编程/5.线程/5.mutex.c)
#add_executable(Linux 6.Linux系统编程/5.线程/6.cond.c)
#add_executable(Linux 6.Linux系统编程/5.线程/7.sem.c)
#add_executable(Linux 6.Linux系统编程/5.线程/8.rwlock.c)
#add_executable(Linux 6.Linux系统编程/5.线程/9.attribute.c)
#add_executable(Linux 6.Linux系统编程/5.线程/10.openmp.c)
#add_executable(Linux 6.Linux系统编程/5.线程/producer_consumer_mutex.cpp)
#add_executable(Linux 6.Linux系统编程/5.线程/producer_consumer_cond.cpp)
#add_executable(Linux 6.Linux系统编程/6.高级IO/1.finite_state_machine.c)
#add_executable(Linux 6.Linux系统编程/6.高级IO/2.select.c)
#add_executable(Linux 6.Linux系统编程/6.高级IO/3.poll.c)
#add_executable(Linux 6.Linux系统编程/6.高级IO/4.epoll.c)
#add_executable(Linux 6.Linux系统编程/6.高级IO/5.mmap.c)
#add_executable(Linux 6.Linux系统编程/6.高级IO/6.flock.c)
add_executable(Linux 6.Linux系统编程/7.进程间通信/pipe.c)


#add_executable(Algorithm 7.Algorithm/1.Search/1.SequentialSearch.cpp)
#add_executable(Algorithm 7.Algorithm/1.Search/2.BinarySearch.cpp)
#add_executable(Algorithm 7.Algorithm/1.Search/3.HashSearch.cpp)
#add_executable(Algorithm 7.Algorithm/2.Sort/1.BubbleSort.cpp)
#add_executable(Algorithm 7.Algorithm/2.Sort/2.SelctionSort.cpp)
#add_executable(Algorithm 7.Algorithm/2.Sort/3.InsertionSort.cpp)
#add_executable(Algorithm 7.Algorithm/2.Sort/4.ShellSort.cpp)
#add_executable(Algorithm 7.Algorithm/2.Sort/5.MergeSort.cpp)
#add_executable(Algorithm 7.Algorithm/2.Sort/6.QuickSort.cpp)
#add_executable(Algorithm 7.Algorithm/2.Sort/7.HeapSort.cpp)
#add_executable(Algorithm 7.Algorithm/3.Tree/1.BinaryTree.cpp)
add_executable(Algorithm 7.Algorithm/3.Tree/2.BalancedBinaryTree.cpp)


add_executable(test test.cpp)
